[gd_scene load_steps=22 format=3 uid="uid://djwuaeo5m3yp4"]

[ext_resource type="Script" uid="uid://b7ccmmkd33rto" path="res://scripts/enemy/boss/boss.gd" id="1_neq0i"]
[ext_resource type="Texture2D" uid="uid://bepddkvvccd85" path="res://assets/boss/boss-01-spritesheet.png" id="2_jncid"]
[ext_resource type="PackedScene" uid="uid://b3rsaldcja42b" path="res://scenes/Enemies/enemy_bullet.tscn" id="2_ly4mr"]
[ext_resource type="PackedScene" uid="uid://ckew7filua1hc" path="res://scenes/Effects/damage_popup.tscn" id="2_qnbj4"]
[ext_resource type="Resource" uid="uid://5f7wlm07hahu" path="res://resources/loot/Boss1Loot.tres" id="2_vrktt"]
[ext_resource type="Script" uid="uid://i73u1u7vqyw0" path="res://scripts/enemy/boss/boss_attack_component.gd" id="5_fssys"]
[ext_resource type="Script" uid="uid://b6ykitiu7pajv" path="res://scripts/enemy/boss/boss_phase_component.gd" id="5_ysxc2"]
[ext_resource type="Script" uid="uid://yvw440irnblc" path="res://scripts/enemy/boss/boss_movement_component.gd" id="7_4fu6r"]
[ext_resource type="Script" uid="uid://8s8iifoj0yum" path="res://scripts/enemy/boss/boss_health_bar_component.gd" id="8_oli83"]
[ext_resource type="Script" uid="uid://dhum6cem7perd" path="res://scripts/enemy/boss/boss_loot_component.gd" id="9_ri3gw"]

[sub_resource type="CircleShape2D" id="CircleShape2D_qnbj4"]
radius = 110.00455

[sub_resource type="AtlasTexture" id="AtlasTexture_r3bxh"]
atlas = ExtResource("2_jncid")
region = Rect2(0, 0, 240, 240)

[sub_resource type="AtlasTexture" id="AtlasTexture_wqpjq"]
atlas = ExtResource("2_jncid")
region = Rect2(240, 0, 240, 240)

[sub_resource type="AtlasTexture" id="AtlasTexture_2cdgk"]
atlas = ExtResource("2_jncid")
region = Rect2(480, 0, 240, 240)

[sub_resource type="AtlasTexture" id="AtlasTexture_qsl3t"]
atlas = ExtResource("2_jncid")
region = Rect2(720, 0, 240, 240)

[sub_resource type="AtlasTexture" id="AtlasTexture_2avx2"]
atlas = ExtResource("2_jncid")
region = Rect2(0, 240, 240, 240)

[sub_resource type="AtlasTexture" id="AtlasTexture_5f346"]
atlas = ExtResource("2_jncid")
region = Rect2(240, 240, 240, 240)

[sub_resource type="AtlasTexture" id="AtlasTexture_0onds"]
atlas = ExtResource("2_jncid")
region = Rect2(480, 240, 240, 240)

[sub_resource type="AtlasTexture" id="AtlasTexture_lfs1x"]
atlas = ExtResource("2_jncid")
region = Rect2(720, 240, 240, 240)

[sub_resource type="SpriteFrames" id="SpriteFrames_8eiau"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r3bxh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wqpjq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2cdgk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qsl3t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2avx2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5f346")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0onds")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lfs1x")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_neq0i"]
particle_flag_disable_z = true
angle_min = 1.0728835e-05
angle_max = 360.00003
spread = 180.0
initial_velocity_min = 100.0
initial_velocity_max = 150.0
angular_velocity_min = -1.6093254e-05
angular_velocity_max = 89.999985
gravity = Vector3(0, 0, 0)
scale_max = 2.0
color = Color(1, 0.2784314, 0.23921569, 1)

[node name="Boss" type="Area2D"]
script = ExtResource("1_neq0i")
bullet_scene = ExtResource("2_ly4mr")
max_health = 100
xp_reward = 100
loot_table = ExtResource("2_vrktt")
damage_popup_scene = ExtResource("2_qnbj4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_qnbj4")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_8eiau")
frame_progress = 0.3537362

[node name="shoot_point_left" type="Marker2D" parent="."]

[node name="shoot_point_right" type="Marker2D" parent="."]

[node name="PhaseParticles2D" type="GPUParticles2D" parent="."]
amount = 80
preprocess = 0.2
explosiveness = 0.2
process_material = SubResource("ParticleProcessMaterial_neq0i")

[node name="BossPhaseComponent" type="Node" parent="."]
script = ExtResource("5_ysxc2")

[node name="BossAttackComponent" type="Node" parent="."]
script = ExtResource("5_fssys")

[node name="FanTimer" type="Timer" parent="BossAttackComponent"]

[node name="CircleTimer" type="Timer" parent="BossAttackComponent"]

[node name="BossMovementComponent" type="Node" parent="."]
script = ExtResource("7_4fu6r")

[node name="BossHealthBarComponent" type="Node" parent="."]
script = ExtResource("8_oli83")

[node name="BossLootComponent" type="Node" parent="."]
script = ExtResource("9_ri3gw")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
